tests/ui/const-generics/generic_const_exprs/feature-gate-generic_const_exprs.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-generic_const_exprs.rs:1:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 1 previous error

